crates/oxc_react_compiler/tests/snapshots/quoted-strings-in-jsx-attribute.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/quoted-strings-in-jsx-attribute.js
---
import { c as _c } from "react/compiler-runtime";
export function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Child text={"Some \"text\""} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function Child(props) {
	return props.text;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
