crates/oxc_react_compiler/tests/snapshots/quoted-strings-jsx-attribute-escaped-constant-propagation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/quoted-strings-jsx-attribute-escaped-constant-propagation.js
---
import { c as _c } from "react/compiler-runtime";
export function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Child text={"Some \"text\""} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function Child(props) {
	return props.text;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
