crates/oxc_react_compiler/tests/snapshots/reactive-control-dependency-forof-collection.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reactive-control-dependency-forof-collection.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let x;
	for (const i of props.values) {
		if (i > 10) {
			x = 10;
		} else {
			x = 1;
		}
	}
	let t0;
	if ($[0] !== x) {
		t0 = [x];
		$[0] = x;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [],
	sequentialRenders: [
		{ values: [12] },
		{ values: [12] },
		{ values: [1] },
		{ values: [1] },
		{ values: [12] },
		{ values: [1] },
		{ values: [12] },
		{ values: [1] }
	]
};
